<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="28dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Breathing"
    tools:showIn="@layout/activity_breathing">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/timerActivityProgressBar"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling" />

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/currentActionProgressBar"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                android:layout_width="248dp"
                android:layout_height="248dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/timerActivityProgressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/timerActivityProgressBar"
                tools:ignore="NotSibling" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/currentActionProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/currentActionProgressBar"
                app:layout_constraintStart_toStartOf="@+id/currentActionProgressBar"
                app:layout_constraintTop_toTopOf="@+id/currentActionProgressBar">

                <TextView
                    android:id="@+id/breathingActionCommandTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/start"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:visibility="visible" />
                <!--android:onClick="onClick"-->
                <!--/>-->


                <TextView
                    android:id="@+id/breathingActionTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/_00_00"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/materialProgressBar"
                    app:layout_constraintEnd_toEndOf="@+id/materialProgressBar"
                    app:layout_constraintStart_toStartOf="@+id/materialProgressBar"
                    app:layout_constraintTop_toTopOf="@+id/materialProgressBar" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/timer"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="327dp" />

            <TextView
                android:id="@+id/inhaleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/inhale"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/HoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/hold"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/exhaleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/exhale"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <Spinner
                android:id="@+id/timerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp" />

            <Spinner
                android:id="@+id/inhaleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp" />

            <Spinner
                android:id="@+id/holdSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp" />

            <Spinner
                android:id="@+id/exhaleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/clockText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clock" />

        <TextView
            android:id="@+id/clockTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/_00_00" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>