<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionFragment"
    xmlns:tigerlee="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:context=".Breathing">-->



    <!--</android.support.design.widget.CoordinatorLayout>-->

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="28dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/timerActivityProgressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

        <!--<com.nex3z.expandablecircleview.ExpandableCircleView-->
            <!--android:id="@+id/currentActionProgress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="385dp"-->
            <!--app:innerColor="@color/colorPrimary"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:progressTextColor="@color/colorAccent"-->
            <!--app:progressTextSize="32sp"-->
            <!--app:showProgressText="false"-->
            <!--/>-->

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/currentActionProgressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="248dp"
            android:layout_height="248dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/timerActivityProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timerActivityProgressBar"
            app:layout_constraintVertical_bias="0.534"
            tools:ignore="NotSibling" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/currentActionProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/currentActionProgressBar"
            app:layout_constraintStart_toStartOf="@+id/currentActionProgressBar"
            app:layout_constraintTop_toTopOf="@+id/currentActionProgressBar">

            <TextView
                android:id="@+id/breathingActionCommandTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/start"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/breathingActionTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/_00_00"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/materialProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/materialProgressBar"
                app:layout_constraintStart_toStartOf="@+id/materialProgressBar"
                app:layout_constraintTop_toTopOf="@+id/materialProgressBar" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/timerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/inhaleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inhale"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/HoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hold"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/exhaleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exhale"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <Spinner
                    android:id="@+id/timerSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:dropDownWidth="match_parent"/>

                <Spinner
                    android:id="@+id/inhaleSpinner"
                    style=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/holdSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/exhaleSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerActivityProgressBar">

            <TextView
                android:id="@+id/clockText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clock" />

            <TextView
                android:id="@+id/clockTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/_00_00" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>